remove initial and add current darn analyses

--- a/use_cases/marine/ARMS/ERR3460467/final_outcome/darn_arms_EtOH_clustered_d_2_likelihood.krona_plot.html
+++ b/use_cases/marine/ARMS/ERR3460467/final_outcome/darn_arms_EtOH_clustered_d_2_likelihood.krona_plot.html
@@ -6626,118 +6626,139 @@ function zoomOut()
     <dataset>darn_likelihood_arms_EtOH_clustered_d_2_krona</dataset>
    </datasets>
 <node name="all">
- <magnitude><val>51.4808</val></magnitude>
+ <magnitude><val>54.7454</val></magnitude>
  <node name="Eukaryota">
-  <magnitudeUnassigned><val>11.9334</val></magnitudeUnassigned>
-  <magnitude><val>51.4808</val></magnitude>
-  <node name="Annelida">
-   <magnitude><val>9.4164</val></magnitude>
-   <node name="Polychaeta">
-    <magnitude><val>9.4164</val></magnitude>
-   </node>
-  </node>
-  <node name="Cnidaria">
-   <magnitude><val>4.1963</val></magnitude>
-   <node name="Myxozoa">
-    <magnitude><val>3.241</val></magnitude>
-    <magnitudeUnassigned><val>2.7646</val></magnitudeUnassigned>
-    <node name="Multivalvulida">
-     <magnitude><val>0.4764</val></magnitude>
-     <node name="Kudoidae">
-      <magnitude><val>0.4764</val></magnitude>
-      <node name="Kudoa">
-       <magnitude><val>0.4764</val></magnitude>
-      </node>
-     </node>
-    </node>
-   </node>
-   <node name="Hydrozoa">
-    <magnitude><val>0.9553</val></magnitude>
-   </node>
-  </node>
-  <node name="Bryozoa">
-   <magnitude><val>1.7599</val></magnitude>
-   <node name="Gymnolaemata">
-    <magnitude><val>1.7599</val></magnitude>
-    <node name="Cheilostomatida">
-     <magnitude><val>1.7599</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Arthropoda">
-   <magnitude><val>5.5501</val></magnitude>
-   <magnitudeUnassigned><val>5.1873</val></magnitudeUnassigned>
-   <node name="Branchiopoda">
-    <magnitude><val>0.3628</val></magnitude>
-    <node name="Anostraca">
-     <magnitude><val>0.3628</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Chordata">
-   <magnitude><val>3.5707</val></magnitude>
-   <node name="Ascidiacea">
-    <magnitude><val>3.5707</val></magnitude>
-    <node name="Stolidobranchia">
-     <magnitude><val>3.5707</val></magnitude>
-    </node>
-   </node>
-  </node>
+  <magnitude><val>53.0213</val></magnitude>
+  <magnitudeUnassigned><val>7.2368</val></magnitudeUnassigned>
   <node name="Bacillariophyta">
-   <magnitude><val>3.2231</val></magnitude>
+   <magnitude><val>3.3168</val></magnitude>
+   <node name="Bacillariophyceae">
+    <magnitude><val>0.5016</val></magnitude>
+   </node>
    <node name="Coscinodiscophyceae">
-    <magnitude><val>2.6001</val></magnitude>
+    <magnitude><val>2.8152</val></magnitude>
     <node name="Thalassiosirales">
-     <magnitude><val>2.6001</val></magnitude>
+     <magnitude><val>2.8152</val></magnitude>
     </node>
    </node>
-   <node name="Bacillariophyceae">
-    <magnitude><val>0.623</val></magnitude>
-    <node name="Bacillariales">
-     <magnitude><val>0.623</val></magnitude>
-     <node name="Bacillariaceae">
-      <magnitude><val>0.623</val></magnitude>
-     </node>
+  </node>
+  <node name="Chytridiomycota">
+   <magnitude><val>0.1124</val></magnitude>
+   <node name="Chytridiomycetes">
+    <magnitude><val>0.1124</val></magnitude>
+    <node name="Spizellomycetales">
+     <magnitude><val>0.1124</val></magnitude>
     </node>
+   </node>
+  </node>
+  <node name="Euglenozoa">
+   <magnitude><val>2.8415</val></magnitude>
+   <node name="Euglenida">
+    <magnitude><val>2.8415</val></magnitude>
    </node>
   </node>
   <node name="Mollusca">
-   <magnitude><val>8.7539</val></magnitude>
+   <magnitude><val>8.5733</val></magnitude>
    <node name="Bivalvia">
-    <magnitude><val>8.3685</val></magnitude>
+    <magnitude><val>8.5733</val></magnitude>
     <node name="Ostreoida">
-     <magnitude><val>8.3685</val></magnitude>
-    </node>
-   </node>
-   <node name="Gastropoda">
-    <magnitude><val>0.3854</val></magnitude>
-    <node name="Pleurotomariida">
-     <magnitude><val>0.3854</val></magnitude>
+     <magnitude><val>8.5733</val></magnitude>
     </node>
    </node>
   </node>
   <node name="Porifera">
-   <magnitude><val>1.2975</val></magnitude>
+   <magnitude><val>1.7713</val></magnitude>
    <node name="Demospongiae">
-    <magnitudeUnassigned><val>0.3729</val></magnitudeUnassigned>
-    <magnitude><val>1.2975</val></magnitude>
+    <magnitude><val>1.7713</val></magnitude>
+    <magnitudeUnassigned><val>0.8616</val></magnitudeUnassigned>
     <node name="Suberitida">
-     <magnitude><val>0.9246</val></magnitude>
+     <magnitude><val>0.9097</val></magnitude>
     </node>
    </node>
   </node>
-  <node name="Echinodermata">
-   <magnitude><val>1.7795</val></magnitude>
-   <node name="Asteroidea">
-    <magnitude><val>1.7795</val></magnitude>
-    <node name="Peripodida">
-     <magnitude><val>1.7795</val></magnitude>
-     <node name="Xyloplacidae">
-      <magnitude><val>1.7795</val></magnitude>
-      <node name="Xyloplax">
-       <magnitude><val>1.7795</val></magnitude>
-       <node name="Xyloplax_janetae">
-        <magnitude><val>1.7795</val></magnitude>
+  <node name="Annelida">
+   <magnitude><val>12.1543</val></magnitude>
+   <node name="Polychaeta">
+    <magnitudeUnassigned><val>11.7902</val></magnitudeUnassigned>
+    <magnitude><val>12.1543</val></magnitude>
+    <node name="Spionida">
+     <magnitude><val>0.3641</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Arthropoda">
+   <magnitude><val>7.134</val></magnitude>
+   <magnitudeUnassigned><val>5.3124</val></magnitudeUnassigned>
+   <node name="Hexanauplia">
+    <magnitude><val>1.8216</val></magnitude>
+   </node>
+  </node>
+  <node name="Bryozoa">
+   <magnitude><val>5.2941</val></magnitude>
+   <node name="Gymnolaemata">
+    <magnitude><val>5.2941</val></magnitude>
+    <node name="Cheilostomatida">
+     <magnitude><val>5.2941</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Chordata">
+   <magnitude><val>3.6636</val></magnitude>
+   <node name="Ascidiacea">
+    <magnitude><val>3.6636</val></magnitude>
+    <node name="Stolidobranchia">
+     <magnitude><val>3.6636</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Cnidaria">
+   <magnitude><val>0.9232</val></magnitude>
+   <node name="Hydrozoa">
+    <magnitude><val>0.9232</val></magnitude>
+   </node>
+  </node>
+ </node>
+ <node name="Bacteria">
+  <magnitude><val>1.7241</val></magnitude>
+  <node name="Terrabacteria_group">
+   <magnitude><val>1.7241</val></magnitude>
+   <node name="Firmicutes">
+    <magnitude><val>1.7241</val></magnitude>
+    <node name="Bacilli">
+     <magnitude><val>1.7241</val></magnitude>
+     <node name="Lactobacillales">
+      <magnitude><val>1.7241</val></magnitude>
+      <node name="Lactobacillaceae">
+       <magnitude><val>1.7241</val></magnitude>
+       <node name="Agrilactobacillus">
+        <magnitude><val>1.7241</val></magnitude>
+        <node name="Agrilactobacillus">
+         <magnitude><val>1.7241</val></magnitude>
+         <node name="composti">
+          <magnitude><val>1.7241</val></magnitude>
+          <node name="Agrilactobacillus">
+           <magnitude><val>1.7241</val></magnitude>
+           <node name="composti">
+            <magnitude><val>1.7241</val></magnitude>
+            <node name="DSM">
+             <magnitude><val>1.7241</val></magnitude>
+             <node name="18527">
+              <magnitude><val>1.7241</val></magnitude>
+              <node name="=">
+               <magnitude><val>1.7241</val></magnitude>
+               <node name="JCM">
+                <magnitude><val>1.7241</val></magnitude>
+                <node name="14202">
+                 <magnitude><val>1.7241</val></magnitude>
+                </node>
+               </node>
+              </node>
+             </node>
+            </node>
+           </node>
+          </node>
+         </node>
+        </node>
        </node>
       </node>
      </node>
