--- a/use_cases/marine/ARMS/ERR3460467/final_outcome/darn_arms_EtOH_clustered_d_2_pres_abs.krona_plot.html
+++ b/use_cases/marine/ARMS/ERR3460467/final_outcome/darn_arms_EtOH_clustered_d_2_pres_abs.krona_plot.html
@@ -6627,97 +6627,107 @@ function zoomOut()
    </datasets>
 <node name="all">
  <magnitude><val>74</val></magnitude>
- <node name="Eukaryota">
-  <magnitudeUnassigned><val>16</val></magnitudeUnassigned>
-  <magnitude><val>74</val></magnitude>
-  <node name="Bryozoa">
-   <magnitude><val>3</val></magnitude>
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Gymnolaemata">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <magnitude><val>3</val></magnitude>
-    <node name="Cheilostomatida">
-     <magnitude><val>3</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Arthropoda">
-   <magnitudeUnassigned><val>7</val></magnitudeUnassigned>
-   <magnitude><val>8</val></magnitude>
-   <node name="Branchiopoda">
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <magnitude><val>1</val></magnitude>
-    <node name="Anostraca">
-     <magnitude><val>1</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Bacillariophyta">
-   <magnitude><val>5</val></magnitude>
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Bacillariophyceae">
-    <magnitude><val>1</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Bacillariales">
-     <magnitude><val>1</val></magnitude>
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <node name="Bacillariaceae">
-      <magnitude><val>1</val></magnitude>
-     </node>
-    </node>
-   </node>
-   <node name="Coscinodiscophyceae">
-    <magnitude><val>4</val></magnitude>
-    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Thalassiosirales">
-     <magnitude><val>4</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Porifera">
+ <node name="Bacteria">
+  <magnitude><val>2</val></magnitude>
+  <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+  <node name="Terrabacteria_group">
    <magnitude><val>2</val></magnitude>
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Demospongiae">
-    <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
-    <magnitude><val>2</val></magnitude>
-    <node name="Suberitida">
-     <magnitude><val>1</val></magnitude>
-    </node>
-   </node>
-  </node>
-  <node name="Annelida">
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>15</val></magnitude>
-   <node name="Polychaeta">
-    <magnitude><val>15</val></magnitude>
-   </node>
-  </node>
-  <node name="Echinodermata">
-   <magnitude><val>2</val></magnitude>
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Asteroidea">
-    <magnitude><val>2</val></magnitude>
+   <node name="Firmicutes">
     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Peripodida">
+    <magnitude><val>2</val></magnitude>
+    <node name="Bacilli">
      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
      <magnitude><val>2</val></magnitude>
-     <node name="Xyloplacidae">
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+     <node name="Lactobacillales">
       <magnitude><val>2</val></magnitude>
-      <node name="Xyloplax">
-       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+      <node name="Lactobacillaceae">
        <magnitude><val>2</val></magnitude>
-       <node name="Xyloplax_janetae">
+       <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+       <node name="Agrilactobacillus">
         <magnitude><val>2</val></magnitude>
+        <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+        <node name="Agrilactobacillus">
+         <magnitude><val>2</val></magnitude>
+         <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+         <node name="composti">
+          <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+          <magnitude><val>2</val></magnitude>
+          <node name="Agrilactobacillus">
+           <magnitude><val>2</val></magnitude>
+           <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+           <node name="composti">
+            <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+            <magnitude><val>2</val></magnitude>
+            <node name="DSM">
+             <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+             <magnitude><val>2</val></magnitude>
+             <node name="18527">
+              <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+              <magnitude><val>2</val></magnitude>
+              <node name="=">
+               <magnitude><val>2</val></magnitude>
+               <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+               <node name="JCM">
+                <magnitude><val>2</val></magnitude>
+                <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+                <node name="14202">
+                 <magnitude><val>2</val></magnitude>
+                </node>
+               </node>
+              </node>
+             </node>
+            </node>
+           </node>
+          </node>
+         </node>
+        </node>
        </node>
       </node>
      </node>
     </node>
    </node>
   </node>
+ </node>
+ <node name="Eukaryota">
+  <magnitude><val>72</val></magnitude>
+  <magnitudeUnassigned><val>13</val></magnitudeUnassigned>
+  <node name="Chytridiomycota">
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <magnitude><val>1</val></magnitude>
+   <node name="Chytridiomycetes">
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <magnitude><val>1</val></magnitude>
+    <node name="Spizellomycetales">
+     <magnitude><val>1</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Bacillariophyta">
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <magnitude><val>5</val></magnitude>
+   <node name="Bacillariophyceae">
+    <magnitude><val>1</val></magnitude>
+   </node>
+   <node name="Coscinodiscophyceae">
+    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <magnitude><val>4</val></magnitude>
+    <node name="Thalassiosirales">
+     <magnitude><val>4</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Euglenozoa">
+   <magnitude><val>4</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Euglenida">
+    <magnitude><val>4</val></magnitude>
+   </node>
+  </node>
   <node name="Mollusca">
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <magnitude><val>11</val></magnitude>
+   <magnitude><val>10</val></magnitude>
    <node name="Bivalvia">
     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
     <magnitude><val>10</val></magnitude>
@@ -6725,10 +6735,32 @@ function zoomOut()
      <magnitude><val>10</val></magnitude>
     </node>
    </node>
-   <node name="Gastropoda">
+  </node>
+  <node name="Cnidaria">
+   <magnitude><val>1</val></magnitude>
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <node name="Hydrozoa">
     <magnitude><val>1</val></magnitude>
+   </node>
+  </node>
+  <node name="Bryozoa">
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <magnitude><val>6</val></magnitude>
+   <node name="Gymnolaemata">
+    <magnitude><val>6</val></magnitude>
     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-    <node name="Pleurotomariida">
+    <node name="Cheilostomatida">
+     <magnitude><val>6</val></magnitude>
+    </node>
+   </node>
+  </node>
+  <node name="Porifera">
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <magnitude><val>2</val></magnitude>
+   <node name="Demospongiae">
+    <magnitude><val>2</val></magnitude>
+    <magnitudeUnassigned><val>1</val></magnitudeUnassigned>
+    <node name="Suberitida">
      <magnitude><val>1</val></magnitude>
     </node>
    </node>
@@ -6737,33 +6769,29 @@ function zoomOut()
    <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
    <magnitude><val>5</val></magnitude>
    <node name="Ascidiacea">
-    <magnitude><val>5</val></magnitude>
     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+    <magnitude><val>5</val></magnitude>
     <node name="Stolidobranchia">
      <magnitude><val>5</val></magnitude>
     </node>
    </node>
   </node>
-  <node name="Cnidaria">
-   <magnitude><val>7</val></magnitude>
-   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-   <node name="Myxozoa">
-    <magnitude><val>6</val></magnitude>
-    <magnitudeUnassigned><val>5</val></magnitudeUnassigned>
-    <node name="Multivalvulida">
-     <magnitude><val>1</val></magnitude>
-     <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-     <node name="Kudoidae">
-      <magnitude><val>1</val></magnitude>
-      <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
-      <node name="Kudoa">
-       <magnitude><val>1</val></magnitude>
-      </node>
-     </node>
-    </node>
+  <node name="Arthropoda">
+   <magnitudeUnassigned><val>7</val></magnitudeUnassigned>
+   <magnitude><val>10</val></magnitude>
+   <node name="Hexanauplia">
+    <magnitude><val>3</val></magnitude>
    </node>
-   <node name="Hydrozoa">
-    <magnitude><val>1</val></magnitude>
+  </node>
+  <node name="Annelida">
+   <magnitudeUnassigned><val>0</val></magnitudeUnassigned>
+   <magnitude><val>15</val></magnitude>
+   <node name="Polychaeta">
+    <magnitudeUnassigned><val>14</val></magnitudeUnassigned>
+    <magnitude><val>15</val></magnitude>
+    <node name="Spionida">
+     <magnitude><val>1</val></magnitude>
+    </node>
    </node>
   </node>
  </node>
